[gd_scene load_steps=11 format=2]

[ext_resource path="res://SwordMan.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Enemy1-sheet.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Green_enemy_dead.png" type="Texture" id=3]
[ext_resource path="res://Sounds/zombie_breath.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/zombie_get_hit.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 6.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 13.0267
height = 0.0

[sub_resource type="Animation" id=3]
length = 3.0
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Alive:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.5, 1, 1.5, 2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 1, 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Dead"
length = 2.0
step = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Dead:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4, 0.8, 1.2, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 9.68858

[node name="SwordMan" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 9.53674e-07, 0 )
scale = Vector2( 0.85, 0.85 )
shape = SubResource( 1 )

[node name="Alive" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.85, 0.85 )
texture = ExtResource( 2 )
hframes = 4

[node name="SwordManAttack" type="Area2D" parent="Alive"]
rotation = -1.5708
scale = Vector2( 0.85, 0.85 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Alive/SwordManAttack"]
position = Vector2( 4.76837e-07, 0 )
rotation = 1.5708
scale = Vector2( 0.85, 0.85 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Atak = SubResource( 3 )
anims/Dead = SubResource( 4 )

[node name="SwordmanBody" type="Area2D" parent="."]
scale = Vector2( 0.85, 0.85 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwordmanBody"]
position = Vector2( 1.35525e-20, 0 )
scale = Vector2( 0.85, 0.85 )
shape = SubResource( 5 )

[node name="Dead" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.85, 0.85 )
z_index = -1
texture = ExtResource( 3 )
hframes = 4

[node name="Breath" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -3.959
attenuation = 14.42

[node name="GetHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -26.057
attenuation = 0.406126
[connection signal="area_entered" from="SwordmanBody" to="." method="_on_SwordmanBody_area_entered"]
[connection signal="body_entered" from="SwordmanBody" to="." method="_on_Area2D_body_entered"]
